@@ -1,0 +1,9 @@
+package test.objectfactory.issue2676;
+
+import org.testng.annotations.Test;
+
+public class TestClassSample {
+
+  @Test
+  public void sampleTestMethod() {}
+}
